Fix for Navbar overlapping in Mobile Mode

--- a/src/components/navBar/styles.scss
+++ b/src/components/navBar/styles.scss
@@ -63,7 +63,7 @@
         flex-direction: column;
         justify-content: center;
         width: 100%;
-        position: absolute;
+        position: absolute !important;
         top: 5rem;
         left: -110%;
         opacity: 1;
@@ -73,6 +73,7 @@
             background-color: #181818;
             left: 0px;
             opacity: 1;
+            z-index: 1;
         }
 
         &__item{
